src/styles/msgStyle.css
.yourMsgContent{
    position: relative;
    display: flex;
    flex-direction: column;
    float: right;
    background-color: #698a5e;
    border-radius: 8px;
    padding: 5px 12px;
    margin: 10px;
    margin-top: 0;
    max-width: 80%;
    width: fit-content;
    overflow-wrap: anywhere;
    box-shadow: -5px -3px 5px 2px #3c3c3c3d;
}

.yourMsg{
    width: 100%;  
    display: flex;
    flex-direction: row;
    text-align: start;
}
.yourMsg p{
    margin: 0;
}

.yourMsgContent:before {
  content: "";
  position: absolute;
  z-index: 0;
  bottom: 0;
  right: -8px;
  height: 19px;
  width: 20px;
  background: #698a5e;
  border-bottom-left-radius: 15px;  
}

.yourMsgContent:after {
    content: "";
    position: absolute;
    z-index: 0;
    bottom: 0;
    right: -10px;
    width: 10px;
    height: 20px;
    background: #4d5156;
    border-bottom-left-radius: 10px;
  }

.otherMsgContent{
    position: relative;
    display: flex;
    flex-direction: column;
    float: left;
    background-color: #5a7e90;
    border-radius: 8px;
    padding: 5px 12px;
    margin: 10px;
    padding-top: 0;
    margin-top: 0;
    max-width: 80%;
    width: fit-content;
    overflow-wrap: anywhere;
    box-shadow: 5px -3px 5px 2px #3c3c3c3d;
}

.otherMsgContent .sendName{
    margin-bottom: 5px;
}
.otherMsgContent .sendName p{
    font-weight: bold;
    float: left;
    margin: 0;
}

.otherMsg{
    width: 100%;  
    display: flex;
    flex-direction: row;
    text-align: start;
}
.otherMsg p{
    margin: 0;
}

.otherMsg:before {
    content: "";
    position: absolute;
    z-index: 0;
    bottom: 0;
    left: -7px;
    height: 19px;
    width: 20px;
    background: #5a7e90;
    border-bottom-right-radius: 15px;
}
.otherMsg:after {
  content: "";
  position: absolute;
  z-index: 1;
  bottom: 0;
  left: -10px;
  width: 10px;
  height: 20px;
  background: #4d5156;
  border-bottom-right-radius: 10px;
}

.time{
    width: 100%;  
    display: flex;
    flex-direction: row-reverse;
    margin-top: 4px;
}

.time p{
    margin: 0;
    font-size: small;
    color: #343434;
}

